syntax = "proto3";

package payments;
option go_package = "github.com/jalexanderII/zero_fintech/gen/Go/payments";

import "core/users.proto";

// Plaid fetches the access token for a user and makes a call to Plaid API
service Plaid {
  // GetLiabilities fetches Plaid Liabilities Endpoint
  rpc GetLiabilities(GetLiabilitiesRequest) returns (GetLiabilitiesResponse);
  // GetTransactions fetches Plaid Transactions Endpoint
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse);
}

message GetLiabilitiesRequest {
  core.User user = 1;
  string access_token = 2;
}

message GetLiabilitiesResponse {
  bytes liabilities_get_response = 1;
}

message GetTransactionsRequest {
  core.User user = 1;
  string access_token = 2;
  int64 months = 3;
}

message GetTransactionsResponse {
  bytes transactions_get_response = 1;
}

